tests/specs/ecosystem/mary/signals/0_2_0.test
mary/signals/0.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Signal<T>'.
  _refresh(): boolean {
  ~~~~~~~~
    at file://<tmpdir>/mod.ts:85:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Signal<T>'.
  _subscribe(target: Computation): void {}
  ~~~~~~~~~~
    at file://<tmpdir>/mod.ts:89:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Signal<T>'.
  _unsubscribe(target: Computation): void {}
  ~~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:91:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Signal<T>'.
  peek(): T {
  ~~~~
    at file://<tmpdir>/mod.ts:97:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Signal<T>'.
  get value(): T {
      ~~~~~
    at file://<tmpdir>/mod.ts:103:7

Found 5 errors.

error: Type checking failed.

